// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a snapshot 1`] = `
<div
  className="App"
>
  <div
    className="List"
  />
  <div
    className="ThumbNail"
  />
  <div
    className="Gallery"
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "white",
          "border": "solid black 5px",
          "color": "black",
          "fontSize": "3em",
          "height": "8vh",
          "margin": "2vh",
          "textDecoration": "none",
          "width": "35vw",
        }
      }
    >
      Go To Gallery
    </button>
  </div>
</div>
`;

exports[`renders a snapshot of Gallery component 1`] = `
<div
  className="Gallery"
>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "border": "solid black 5px",
        "color": "black",
        "fontSize": "3em",
        "height": "8vh",
        "margin": "2vh",
        "textDecoration": "none",
        "width": "35vw",
      }
    }
  >
    Go To Gallery
  </button>
</div>
`;

exports[`renders a snapshot of main App component 1`] = `
<div
  className="App"
>
  <div
    className="List"
  />
  <div
    className="ThumbNail"
  />
  <div
    className="Gallery"
  >
    <button
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "white",
          "border": "solid black 5px",
          "color": "black",
          "fontSize": "3em",
          "height": "8vh",
          "margin": "2vh",
          "textDecoration": "none",
          "width": "35vw",
        }
      }
    >
      Go To Gallery
    </button>
  </div>
</div>
`;
